--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WDD 131 - ODUMAMWEN EVANS HENRY AISIOKUEBPR</title>
+    <title>WDD 131 - ODUMAMWEN EVANS HENRY AISIOKUEBOR</title>
 </head>
 <body>
-    <h1>WDD 131 - ODUMAMWEN EVANS HENRY AISIOKUEBPR</h1>
+    <h1>WDD 131 - ODUMAMWEN EVANS HENRY AISIOKUEBOR</h1>
 </body>
 </html>
