Developed the main, the aside, the footer contents.

--- a/week01/basic-layout.html
+++ b/week01/basic-layout.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>
-        <p id="navigation-description">Head content</p>
+        <p id="navigation-description">Header content</p>
         <nav id="navigation-bar">
             <a class="home" href="#home">Home</a>
             <a class="projects" href="#projects">Projects</a>
@@ -15,5 +15,14 @@
             <a class="Contact" href="#Contact">Contact Us</a>
         </nav>
     </header>
+    <main>
+        <p>Main content</p>
+    </main>
+    <aside>
+        <p>Aside Content</p>
+    </aside>
+    <footer>
+        <p>Footer content</p>
+    </footer>
 </body>
 </html>
