--- a/week01/basic-layout.html
+++ b/week01/basic-layout.html
@@ -3,16 +3,17 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="styles/layout.css">
         <title>Basic layout - Mastering workflow process</title>
     </head>
     <body>
         <header>
             <p id="navigation-description">Header content</p>
             <nav id="navigation-bar">
-                <a class="home" href="#home">Home</a>
-                <a class="projects" href="#projects">Projects</a>
-                <a class="Services" href="#Services">Services</a>
-                <a class="Contact" href="#Contact">Contact Us</a>
+                <a class="nav-link" href="#home">Home</a>
+                <a class="nav-link" href="#projects">Projects</a>
+                <a class="nav-link" href="#Services">Services</a>
+                <a class="nav-link" href="#Contact">Contact Us</a>
             </nav>
         </header>
         <main>
