--- a/index.html
+++ b/index.html
@@ -6,6 +6,45 @@
     <title>WDD 131 - ODUMAMWEN EVANS HENRY AISIOKUEBOR</title>
 </head>
 <body>
-    <h1>WDD 131 - ODUMAMWEN EVANS HENRY AISIOKUEBOR</h1>
+    <header>
+        <h1>WDD 131 : Dynamic Web Fundamentals - ODUMAMWEN EVANS HENRY AISIOKUEBOR</h1>
+        <nav>
+            <a href="">Linkedin</a>
+            <a href="">Canvas</a>
+            <a href="">Scripture</a>
+            <a href="">Final Project</a>
+        </nav>
+    </header>
+
+    <main>
+        <div>
+            <h2>About Me</h2>
+            <p>My name is Odumamwen Evans Henry Aisiokuebor alias Oducity. I was born and brought up in Nigeria and live with my family, a wife and 3 children in Benin City, Nigeria. I have worked as aluminum roof engineer in two companies for 8 years. Currently, I am working as a lead engineer in Unicon Aluminum and Solar Solutions and also happily serving as a Bishop in the church of Jesus Christ of Latter-Day Saints. I enjoy learning new things and having fun with my family.</p>
+            <img class="my-photo" src="" alt="Photo of Odumamwen Evans Henry Aisiokuebor">
+        </div>
+        <div>
+            <h2>Nigeria</h2>
+            <hr>
+            <p>Nigeria is the most populated country in africa with over 233.5 million people as of 2025 estimate. Nigeria is a home to 36 states and is located in west africa bordering Niger in the north, Chad by the north-eastern side, Benin Republic in the Eastern, and Cameroon in the east-southern side and stretches to the atlantic ocean in both the southern and western side. Nigeria is highly rich in cultural heritage with about 370 ethnic groups and speaks over 500 languages.</p>
+            <img class="nigerian-flag" src="" alt="Nigerian flag">
+        </div>
+    </main>
+    <aside>
+        <h2>Web Dev Resources</h2>
+        <div>
+            <ul>
+                <li>Dev. Community</li>
+                <li>Smashing Magazine</li>
+                <li>CSS Tricks</li>
+                <li>W3 School</li>
+                <li>Udemy</li>
+                <li>FreeCodeCamp</li>
+                <li>Image Placeholder</li>
+            </ul>
+        </div>
+    </aside>
+    <footer>
+        <p>&copy; 2025 &nbsp;|&nbsp;  Odumamwen Evans Henry Aisiokuebor &nbsp;|&nbsp;  NIGERIA.</p>
+    </footer>
 </body>
 </html>
