--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <header>
-            <h1> <span id="course-title"> 131 : Dynamic Web Fundamentals - ODUMAMWEN EVANS HENRY AISIOKUEBOR</span></h1>
+            <h1> <span id="course-title"> 131 Dynamic Web Fundamentals</span></h1>
             <nav id="navigation-bar">
                 <a href="#" class="nav-link">Linkedin</a>
                 <a href="#" class="nav-link">Canvas</a>
