Added my linkedin profile link

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <header>
             <h1> <span id="course-title"> 131 Dynamic Web Fundamentals</span></h1>
             <nav id="navigation-bar">
-                <a href="#" class="nav-link">Linkedin</a>
+                <a href="www.linkedin.com/in/odumamwen-henry-aisiokuebor-3557aa280" class="nav-link">Linkedin</a>
                 <a href="#" class="nav-link">Canvas</a>
                 <a href="#" class="nav-link">Scripture</a>
                 <a href="#" class="nav-link">Final Project</a>
