Added href content to various anchor tags.

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
             <h1> <span id="course-title"> 131 Dynamic Web Fundamentals</span></h1>
             <nav id="navigation-bar">
                 <a href="www.linkedin.com/in/odumamwen-henry-aisiokuebor-3557aa280" class="nav-link">Linkedin</a>
-                <a href="#" class="nav-link">Canvas</a>
-                <a href="#" class="nav-link">Scripture</a>
+                <a href="https://byupw.instructure.com" class="nav-link">Canvas</a>
+                <a href="https://www.churchofjesuschrist.org/study/scriptures/nt/john/15?lang=eng&id=p4#p4" class="nav-link">Scripture</a>
                 <a href="#" class="nav-link">Final Project</a>
             </nav>
         </header>
