Applied CSS3 @media query for super responsiveness.

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </main>
 
         <aside>
-            <h3>Want want more materials, check</h3>
+            <h3>Want more materials</h3>
             <h2 class="resources equal-spacing">Web Dev Resources</h2>
             
             <ul>
