Dynamically developed and displayed current date and last modified date using javaScript date object.

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         <link href="https://fonts.googleapis.com/css2?family=Sofia&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Sofia&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Sofia&display=swap" rel="stylesheet">
-        <script src="scripts/getdates.js"></script>
         <title>WDD 131 - Dynamic Web Fundamentals - ODUMAMWEN EVANS HENRY AISIOKUEBOR</title>
+        <script src="scripts/getdates.js" defer></script>
     </head>
     <body>
         <header>
@@ -63,7 +63,7 @@
         </aside>
 
         <footer>
-            <p>&copy; <span id="currentyear"></span> &nbsp;|&nbsp;  Odumamwen Evans Henry Aisiokuebor &nbsp;|&nbsp;  NIGERIA.</p>
+            <p>&copy; <span id="currentyear"></span> &nbsp;|&nbsp;  Odumamwen Evans Henry Aisiokuebor &nbsp;|&nbsp;  Nigeria.</p>
             <p id="lastModified"></p>
         </footer>
     </body>
