--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="Wdd131 - Dynamic Web Fundamentals home / landing page, EngOdus home page, Oducity home page, Odumamwen Evans Henry Aisiokuebor home page">
+        <meta name="description" content="WDD 131 - Dynamic Web Fundamentals home / landing page, EngOdus home page, Oducity home page, Odumamwen Evans Henry Aisiokuebor home page">
         <meta name="author" content="Odumamwen Evans Henry Aisiokuebor">
         <link rel="stylesheet" href="styles/base.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
