Place li items in anchor elements.

--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
             
             <ul>
                 <li><a href="#">Dev. Community</a></li>
-                <li>Smashing Magazine</li>
-                <li>CSS Tricks</li>
-                <li>W3 School</li>
-                <li>Udemy</li>
-                <li>FreeCodeCamp</li>
-                <li>Image Placeholder</li>
+                <li><a href="#"> Magazine</a></li>
+                <li><a href="#">CSS Tricks</a></li>
+                <li><a href="#">W3 School</a></li>
+                <li><a href="#">Udemy</a></li>
+                <li><a href="#">FreeCodeCamp</a></li>
+                <li><a href="#">Image Placeholder</a></li>
             </ul>
         
         </aside>
