--- a/week02/media-query.html
+++ b/week02/media-query.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Media Query Activity - WDD 131 - Dynamic Web Fundamentals</title>
+    <title>WDD 131 - Dynamic Web Fundamentals - Media Query Activity</title>
     <meta name="description" content="WDD 131 - Dynamic Web Fundamentals, Media Query Activity">
     <meta name="author" content="Odumamwen Evans Henry Aisiokuebor">
     <link rel="preconnect" href="https://fonts.googleapis.com">
