Developed the section elements.

--- a/week02/media-query.html
+++ b/week02/media-query.html
@@ -13,6 +13,27 @@
     <link rel="styles" href="styles/media-query-large.css">
 </head>
 <body>
-    
+    <header>
+        <h1>Media Query Example</h1>
+    </header>
+    <main>
+        <section>
+            <h2>John 15: 4;</h2>
+            <p>Abide in me, and I in you. As the branch cannot bear fruit of itself, except it abide in the vine; no more can ye, except ye abide in me.</p>
+        </section>
+        <section>
+            <h2>Luke 4: 18 - 21</h2>
+            <p>18 The Spirit of the Lord is upon me, because he hath anointed me to preach the gospel to the poor; he hath sent me to heal the brokenhearted, to preach deliverance to the captives, and recovering of sight to the blind, to set at liberty them that are bruised,
+
+19 To preach the acceptable year of the Lord.
+
+20 And he closed the book, and he gave it again to the minister, and sat down. And the eyes of all them that were in the synagogue were fastened on him.
+
+21 And he began to say unto them, This day is this scripture fulfilled in your ears.</p>
+        </section>
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
