Developed the media-query.html file.

--- a/week02/media-query.html
+++ b/week02/media-query.html
@@ -33,7 +33,7 @@
         </section>
     </main>
     <footer>
-
+        <p>Odumamwen Evans Henry Aisiokuebor</p>
     </footer>
 </body>
 </html>
