--- a/week02/media-query.html
+++ b/week02/media-query.html
@@ -9,8 +9,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-    <link rel="styles" href="styles/media-query.css">
-    <link rel="styles" href="styles/media-query-large.css">
+    <link rel="stylesheet" href="styles/media-query.css">
+    <link rel="stylesheet" href="styles/media-query-large.css">
 </head>
 <body>
     <header>
@@ -18,7 +18,7 @@
     </header>
     <main>
         <section>
-            <h2>John 15: 4;</h2>
+            <h2>John 15: 4</h2>
             <p>Abide in me, and I in you. As the branch cannot bear fruit of itself, except it abide in the vine; no more can ye, except ye abide in me.</p>
         </section>
         <section>
