--- a/week02/bom.html
+++ b/week02/bom.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="discription" content="WDD 131 - Book of Mormon Top 10, javascript DoM">
-    <meta name="author" content="Odumamwen Evans Henry Aisiokuebor">
-    <title>BOM Top 10 - Book of Mormon Top 10</title>
-</head>
-<body>
-    
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="discription" content="WDD 131 - Book of Mormon Top 10, javascript DoM">
+        <meta name="author" content="Odumamwen Evans Henry Aisiokuebor">
+        <title>BOM Top 10 - Book of Mormon Top 10</title>
+    </head>
+    <body>
+        <h1>📖 Book of Mormon - Top 10</h1>
+        <main>
+            <label for="favchap">Enter Book and Chapter: </label>
+            <input type="text" id="favchap" placeholder="Alma 5">
+            <button type="submit">Add Chapter</button>
+            <ul id="list"></ul>
+        </main>
+    </body>
 </html>
