--- a/week02/bom.html
+++ b/week02/bom.html
@@ -5,6 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="discription" content="WDD 131 - Book of Mormon Top 10, javascript DoM">
         <meta name="author" content="Odumamwen Evans Henry Aisiokuebor">
+        <link rel="stylesheet" href="styles/bom.css">
+        <script src="scripts/bom.js" defer></script>
         <title>BOM Top 10 - Book of Mormon Top 10</title>
     </head>
     <body>
