Developed the header element and its <a> elements.

--- a/temples.html
+++ b/temples.html
@@ -11,7 +11,16 @@
     <title>Document</title>
 </head>
 <body>
-    <header></header>
+    <header>
+        <h1>Temple Album</h1>
+        <nav>
+            <a href="#">Home</a>
+            <a href="#">Old</a>
+            <a href="#">New</a>
+            <a href="#">Large</a>
+            <a href="#">Small</a>
+        </nav>
+    </header>
     <main></main>
     <footer></footer>
 </body>
