Changed the <h1> tag in the <header> tag to <span> tag.

--- a/temples.html
+++ b/temples.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-        <h1>Temple Album</h1>
+        <span>Temple Album</span>
         <nav>
             <a href="#">Home</a>
             <a href="#">Old</a>
