created <h1>, <figure>, <img> and <caption> elements in the <main> element and developed the footer element and its contents.

--- a/temples.html
+++ b/temples.html
@@ -21,7 +21,24 @@
             <a href="#">Small</a>
         </nav>
     </header>
-    <main></main>
-    <footer></footer>
+    <main>
+        <h1></h1>
+        <figure><img src="" alt=""><caption></caption></figure>
+        <figure><img><caption></caption></figure>
+        <figure><img><caption></caption></figure>
+        <figure><img><caption></caption></figure>
+        <figure><img><caption></caption></figure>
+        <figure><img><caption></caption></figure>
+        <figure><img><caption></caption></figure>
+        <figure><img><caption></caption></figure>
+        <figure><img><caption></caption></figure>
+        <figure><img><caption></caption></figure>
+        <figure><img><caption></caption></figure>
+        <figure><img><caption></caption></figure>
+    </main>
+    <footer>
+        <p>&copy; <span id="currentyear"></span> &nbsp;|&nbsp;  Odumamwen Evans Henry Aisiokuebor &nbsp;|&nbsp;  Nigeria.</p>
+        <p id="lastModified"></p>
+    </footer>
 </body>
 </html>
