--- a/temples.html
+++ b/temples.html
@@ -23,18 +23,18 @@
     </header>
     <main>
         <h1></h1>
-        <figure><img src="" alt=""><caption></caption></figure>
-        <figure><img><caption></caption></figure>
-        <figure><img><caption></caption></figure>
-        <figure><img><caption></caption></figure>
-        <figure><img><caption></caption></figure>
-        <figure><img><caption></caption></figure>
-        <figure><img><caption></caption></figure>
-        <figure><img><caption></caption></figure>
-        <figure><img><caption></caption></figure>
-        <figure><img><caption></caption></figure>
-        <figure><img><caption></caption></figure>
-        <figure><img><caption></caption></figure>
+        <figure><img src="images/images/aba-nigeria-temple-lds.webp" alt="Photo of Aba Nigeria Temple of the Church of Jesus Christ of Latter-Day Saints."><caption>Aba Nigeria Temple of the Church of Jesus Christ of Latter-Day Saints.</caption></figure>
+        <figure><img src="images/images/aba-nigeria-temple-lds2.webp" alt="Aba Nigeria Temple"><caption>Temple of the Church of Jesus Christ of Latter-Day Saints in Aba Nigeria.</caption></figure>
+        <figure><img src="images/images/accra-ghana-temple.webp" alt="Accra-ghana-temple"><caption>Temple of the Church of Jesus Christ of Latter-Day Saints in Accra, Ghana</caption></figure>
+        <figure><img src="images/images/adelaide-australia-temple.webp" alt="Adelaide-australia-temple"><caption>The Temple of the Church of Jesus Christ of Latter-Day Saints in Adelaide, Australia.</caption></figure>
+        <figure><img src="images/images/albuquerque-New-Mexico-temple.webp" alt="Albuquerque-New-Mexico-temple"><caption>The Temple of the Church of Jesus Christ of Latter-Day Saints in Albuquerque, New Mexico.</caption></figure>
+        <figure><img src="images/images/anchorage-temple-lds.webp" alt="Photo of the Anchorage Temple, Alaska."><caption>The Temple of the Church of Jesus Christ of Latter-Day Saints in Anchorage, Alaska, US.</caption></figure>
+        <figure><img src="images/images/apia-samoa-temple.webp" alt="Photo of apia-samoa-temple"><caption>The Temple of the Church of Jesus Christ of Latter-Day Saints in Apia Samao in the continetal of Oceania.</caption></figure>
+        <figure><img src="images/images/Arequipa-Peru-Temple.webp" alt="Photo of Arequipa-Peru-Temple"><caption>The Temple of the Church of Jesus Christ of Latter-Day Saints in Araquipa, Peru.</caption></figure>
+        <figure><img src="images/images/Arequipa-Peru-Temple2.webp" alt="Photo of Arequipa-Peru-Temple2"><caption>The Temple of the Church of Jesus Christ of Latter-Day Saints in Araquipa, Peru.</caption></figure>
+        <figure><img src="images/images/Asuncion-Paraguay-Temple.webp" alt="Photo of Asuncion-Paraguay-Temple"><caption>The Temple of the Church of Jesus Christ of Latter-Day Saints in Asuncion, Paraguay.</caption></figure>
+        <figure><img src="images/images/Asuncion-Paraguay-Temple2.webp" alt="Photo of Asuncion-Paraguay-Temple2"><caption>The Temple of the Church of Jesus Christ of Latter-Day Saints in Asuncion, Paraguay.</caption></figure>
+        <figure><img src="images/images/anchorage-temple-lds.webp" alt="Photo of the Anchorage Temple, Alaska."><caption>The Temple of the Church of Jesus Christ of Latter-Day Saints in Anchorage, Alaska, US.</caption></figure>
     </main>
     <footer>
         <p>&copy; <span id="currentyear"></span> &nbsp;|&nbsp;  Odumamwen Evans Henry Aisiokuebor &nbsp;|&nbsp;  Nigeria.</p>
