Added code to the css files.

--- a/temples.html
+++ b/temples.html
@@ -6,14 +6,14 @@
     <meta name="discription" content="WDD 131 - Dynamic Web Fundamentals, Temple page, Responsive web design">
     <meta name="author" content="Odumamwen Evans Henry Aisiokuebor">
     <link rel="stylesheet" href="styles/temples.css">
-    <link rel="styles" href="styles/temples-large.css">
+    <link rel="stylesheet" href="styles/temples-large.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sofia&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Sofia&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Sofia&display=swap" rel="stylesheet">
     <script src="scripts/temples.js" defer></script>
-    <title>Document</title>
+    <title>WDD 131 - Temple Album - Odumamwen Henry</title>
 </head>
 <body>
     <header>
@@ -27,23 +27,75 @@
         </nav>
     </header>
     <main>
-        <h1></h1>
-        <figure><img src="images/images/aba-nigeria-temple-lds.webp" alt="Photo of Aba Nigeria Temple of the Church of Jesus Christ of Latter-Day Saints."><caption>Aba Nigeria Temple of the Church of Jesus Christ of Latter-Day Saints.</caption></figure>
-        <figure><img src="images/images/aba-nigeria-temple-lds2.webp" alt="Aba Nigeria Temple"><caption>Temple of the Church of Jesus Christ of Latter-Day Saints in Aba Nigeria.</caption></figure>
-        <figure><img src="images/images/accra-ghana-temple.webp" alt="Accra-ghana-temple"><caption>Temple of the Church of Jesus Christ of Latter-Day Saints in Accra, Ghana</caption></figure>
-        <figure><img src="images/images/adelaide-australia-temple.webp" alt="Adelaide-australia-temple"><caption>The Temple of the Church of Jesus Christ of Latter-Day Saints in Adelaide, Australia.</caption></figure>
-        <figure><img src="images/images/albuquerque-New-Mexico-temple.webp" alt="Albuquerque-New-Mexico-temple"><caption>The Temple of the Church of Jesus Christ of Latter-Day Saints in Albuquerque, New Mexico.</caption></figure>
-        <figure><img src="images/images/anchorage-temple-lds.webp" alt="Photo of the Anchorage Temple, Alaska."><caption>The Temple of the Church of Jesus Christ of Latter-Day Saints in Anchorage, Alaska, US.</caption></figure>
-        <figure><img src="images/images/apia-samoa-temple.webp" alt="Photo of apia-samoa-temple"><caption>The Temple of the Church of Jesus Christ of Latter-Day Saints in Apia Samao in the continetal of Oceania.</caption></figure>
-        <figure><img src="images/images/Arequipa-Peru-Temple.webp" alt="Photo of Arequipa-Peru-Temple"><caption>The Temple of the Church of Jesus Christ of Latter-Day Saints in Araquipa, Peru.</caption></figure>
-        <figure><img src="images/images/Arequipa-Peru-Temple2.webp" alt="Photo of Arequipa-Peru-Temple2"><caption>The Temple of the Church of Jesus Christ of Latter-Day Saints in Araquipa, Peru.</caption></figure>
-        <figure><img src="images/images/Asuncion-Paraguay-Temple.webp" alt="Photo of Asuncion-Paraguay-Temple"><caption>The Temple of the Church of Jesus Christ of Latter-Day Saints in Asuncion, Paraguay.</caption></figure>
-        <figure><img src="images/images/Asuncion-Paraguay-Temple2.webp" alt="Photo of Asuncion-Paraguay-Temple2"><caption>The Temple of the Church of Jesus Christ of Latter-Day Saints in Asuncion, Paraguay.</caption></figure>
-        <figure><img src="images/images/anchorage-temple-lds.webp" alt="Photo of the Anchorage Temple, Alaska."><caption>The Temple of the Church of Jesus Christ of Latter-Day Saints in Anchorage, Alaska, US.</caption></figure>
+
+        <h1>Home</h1>
+
+        <figure>
+            <img src="images/images/aba-nigeria-temple-lds.webp" alt="Photo of Aba Nigeria Temple of the Church of Jesus Christ of Latter-Day Saints.">
+            <caption>Aba Nigeria Temple, Nigeria.</caption>
+        </figure>
+
+        <figure>
+            <img src="images/images/aba-nigeria-temple-lds2.webp" alt="Aba Nigeria Temple">
+            <caption>Aba, Nigeria.</caption>
+        </figure>
+
+        <figure>
+            <img src="images/images/accra-ghana-temple.webp" alt="Accra-ghana-temple">
+            <caption>Accra, Ghana</caption>
+        </figure>
+
+        <figure>
+            <img src="images/images/adelaide-australia-temple.webp" alt="Adelaide-australia-temple">
+            <caption>Adelaide, Australia.</caption>
+        </figure>
+
+        <figure>
+            <img src="images/images/albuquerque-New-Mexico-temple.webp" alt="Albuquerque-New-Mexico-temple">
+            <caption>Albuquerque, New Mexico.</caption>
+        </figure>
+
+        <figure>
+            <img src="images/images/anchorage-temple-lds.webp" alt="Photo of the Anchorage Temple, Alaska.">
+            <caption>Anchorage, Alaska, US.</caption>
+        </figure>
+
+        <figure>
+            <img src="images/images/apia-samoa-temple.webp" alt="Photo of apia-samoa-temple">
+            <caption>Apia Samao.</caption>
+        </figure>
+
+        <figure>
+            <img src="images/images/Arequipa-Peru-Temple.webp" alt="Photo of Arequipa-Peru-Temple">
+            <caption>Araquipa, Peru.</caption>
+        </figure>
+
+        <figure>
+            <img src="images/images/Arequipa-Peru-Temple2.webp" alt="Photo of Arequipa-Peru-Temple2">
+            <caption>Araquipa, Peru.</caption>
+        </figure>
+
+        <figure>
+            <img src="images/images/Asuncion-Paraguay-Temple.webp" alt="Photo of Asuncion-Paraguay-Temple">
+            <caption>Asuncion, Paraguay.</caption>
+        </figure>
+
+        <figure>
+            <img src="images/images/Asuncion-Paraguay-Temple2.webp" alt="Photo of Asuncion-Paraguay-Temple2">
+            <caption>Asuncion, Paraguay.</caption>
+        </figure>
+
+        <figure>
+            <img src="images/images/anchorage-temple-lds.webp" alt="Photo of the Anchorage Temple, Alaska.">
+            <caption>Anchorage, Alaska, US.</caption>
+        </figure>
+
     </main>
+
     <footer>
         <p>&copy; <span id="currentyear"></span> &nbsp;|&nbsp;  Odumamwen Evans Henry Aisiokuebor &nbsp;|&nbsp;  Nigeria.</p>
         <p id="lastModified"></p>
     </footer>
+
 </body>
 </html>
