Developed temples.js to dynamically compute the last update date and time.

--- a/temples.html
+++ b/temples.html
@@ -93,7 +93,7 @@
     </main>
 
     <footer>
-        <p>&copy; <span id="currentyear"></span> &nbsp;|&nbsp;  Odumamwen Evans Henry Aisiokuebor &nbsp;|&nbsp;  Nigeria.</p>
+        <p>&copy; <span id="currentyear"></span> &nbsp; 🙋  &nbsp;  Odumamwen Evans Henry Aisiokuebor &nbsp; : 🙋 &nbsp;  Nigeria.</p>
         <p id="lastModified"></p>
     </footer>
 
