Developed javascript to dynamically display menu in mobile view devices.

--- a/temples.html
+++ b/temples.html
@@ -15,79 +15,86 @@
     <script src="scripts/temples.js" defer></script>
     <title>WDD 131 - Temple Album - Odumamwen Henry</title>
 </head>
-<body>
-    <header>
-        <span>Temple Album</span>
-        <nav>
-            <a href="#">Home</a>
-            <a href="#">Old</a>
-            <a href="#">New</a>
-            <a href="#">Large</a>
-            <a href="#">Small</a>
-        </nav>
+<body id="body">
+    <header class="header">
+            <span class="logo">Temple Album</span>
+            <nav class="nav" id="myLinks">
+                <a class="nav_link" href="#">Home</a>
+                <a class="nav_link" href="#">Old</a>
+                <a class="nav_link" href="#">New</a>
+                <a class="nav_link" href="#">Large</a>  
+                <a class="nav_link" href="#">Small</a>                
+            </nav>
+            <!--     ================================      -->
+            <div class="hamburger">
+                <div class="hamburger_bar"></div>
+                <div class="hamburger_bar"></div>
+                <div class="hamburger_bar"></div>
+            </div>
     </header>
+    <!--   =============================  -->
     <main>
 
         <h1>Home</h1>
 
         <figure>
             <img src="images/images/aba-nigeria-temple-lds.webp" alt="Photo of Aba Nigeria Temple of the Church of Jesus Christ of Latter-Day Saints.">
-            <caption>Aba Nigeria Temple, Nigeria.</caption>
+            <figcaption>Aba Nigeria Temple, Nigeria.</figcaption>
         </figure>
 
         <figure>
             <img src="images/images/aba-nigeria-temple-lds2.webp" alt="Aba Nigeria Temple">
-            <caption>Aba, Nigeria.</caption>
+            <figcaption>Aba, Nigeria.</figcaption>
         </figure>
 
         <figure>
             <img src="images/images/accra-ghana-temple.webp" alt="Accra-ghana-temple">
-            <caption>Accra, Ghana</caption>
+            <figcaption>Accra, Ghana</figcaption>
         </figure>
 
         <figure>
             <img src="images/images/adelaide-australia-temple.webp" alt="Adelaide-australia-temple">
-            <caption>Adelaide, Australia.</caption>
+            <figcaption>Adelaide, Australia.</figcaption>
         </figure>
 
         <figure>
             <img src="images/images/albuquerque-New-Mexico-temple.webp" alt="Albuquerque-New-Mexico-temple">
-            <caption>Albuquerque, New Mexico.</caption>
+            <figcaption>Albuquerque, New Mexico.</figcaption>
         </figure>
 
         <figure>
             <img src="images/images/anchorage-temple-lds.webp" alt="Photo of the Anchorage Temple, Alaska.">
-            <caption>Anchorage, Alaska, US.</caption>
+            <figcaption>Anchorage, Alaska, US.</figcaption>
         </figure>
 
         <figure>
             <img src="images/images/apia-samoa-temple.webp" alt="Photo of apia-samoa-temple">
-            <caption>Apia Samao.</caption>
+            <figcaption>Apia Samao.</figcaption>
         </figure>
 
         <figure>
             <img src="images/images/Arequipa-Peru-Temple.webp" alt="Photo of Arequipa-Peru-Temple">
-            <caption>Araquipa, Peru.</caption>
+            <figcaption>Araquipa, Peru.</figcaption>
         </figure>
 
         <figure>
             <img src="images/images/Arequipa-Peru-Temple2.webp" alt="Photo of Arequipa-Peru-Temple2">
-            <caption>Araquipa, Peru.</caption>
+            <figcaption>Araquipa, Peru.</figcaption>
         </figure>
 
         <figure>
             <img src="images/images/Asuncion-Paraguay-Temple.webp" alt="Photo of Asuncion-Paraguay-Temple">
-            <caption>Asuncion, Paraguay.</caption>
+            <figcaption>Asuncion, Paraguay.</figcaption>
         </figure>
 
         <figure>
             <img src="images/images/Asuncion-Paraguay-Temple2.webp" alt="Photo of Asuncion-Paraguay-Temple2">
-            <caption>Asuncion, Paraguay.</caption>
+            <figcaption>Asuncion, Paraguay.</figcaption>
         </figure>
 
         <figure>
             <img src="images/images/anchorage-temple-lds.webp" alt="Photo of the Anchorage Temple, Alaska.">
-            <caption>Anchorage, Alaska, US.</caption>
+            <figcaption>Anchorage, Alaska, US.</figcaption>
         </figure>
 
     </main>
