Added h1 and h2 elements to the basic layout activity.

--- a/temples.html
+++ b/temples.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="discription" content="WDD 131 - Dynamic Web Fundamentals, Temple page, Responsive web design">
+    <meta name="discription" content="WDD 131 - Dynamic Web Fundamentals, Temple photos page, Responsive web design">
     <meta name="author" content="Odumamwen Evans Henry Aisiokuebor">
     <link rel="stylesheet" href="styles/temples.css">
     <link rel="stylesheet" href="styles/temples-large.css">
