--- a/week01/basic-layout.html
+++ b/week01/basic-layout.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="descriptio" content="Basic layout principles of html,">
         <link rel="stylesheet" href="styles/layout.css">
         <title>Basic layout - Mastering workflow process</title>
     </head>
@@ -17,9 +18,11 @@
             </nav>
         </header>
         <main>
+            <h1>Basic - Layout</h1>
             <p>Main content</p>
         </main>
         <aside>
+            <h2>Aside content comes here</h2>
             <p>Aside Content</p>
         </aside>
         <footer>
