--- a/temples.html
+++ b/temples.html
@@ -35,7 +35,7 @@
     <!--   =============================  -->
     <main>
 
-        <h1>Home</h1>
+        <h1>Home - Temple</h1>
 
         <figure>
             <img src="images/images/aba-nigeria-temple-lds.webp" alt="Photo of Aba Nigeria Temple of the Church of Jesus Christ of Latter-Day Saints.">
