--- a/temples.html
+++ b/temples.html
@@ -36,6 +36,7 @@
     <main>
 
         <h1>Home - Temple</h1>
+        <h2>Below are some temple photos:</h2>
 
         <figure>
             <img src="images/images/aba-nigeria-temple-lds.webp" alt="Photo of Aba Nigeria Temple of the Church of Jesus Christ of Latter-Day Saints.">
