Corrected spelling in the basic-layout html file.

--- a/week01/basic-layout.html
+++ b/week01/basic-layout.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="descriptio" content="Basic layout principles of html,">
+        <meta name="description" content="Basic layout principles of html,">
         <link rel="stylesheet" href="styles/layout.css">
         <title>Basic layout - Mastering workflow process</title>
     </head>
