--- a/week03/design.html
+++ b/week03/design.html
@@ -15,19 +15,19 @@
     </head>
     <body>
         <header>
-            <marquee behavior="alternate" direction="right"><br>Join us for the ribbon cutting cermony at 🪲 The Lazy Bug!<br>Friday at 11:00 AM</marquee>
+            <div class="banner"><br>Join us for the ribbon cutting cermony at 🪲 The Lazy Bug!<br>Friday at 11:00 AM</div>
             <h1>Design Principles</h1>
         </header>
         <main>
             <h2>Heading 2</h2>
-            <section>
+            <section class="first-section">
                 <h3>Article</h3>
                 <article>
                     <p>💯 Porem, ipsum dolor sit amet consectetur adipisicing elit. Soluta consequuntur recusandae molestias nemo, earum quam eius quis cupiditate blanditiis voluptates? Lorem ipsum dolor sit amet consectetur adipisicing elit. Error dolore ipsum commodi doloremque quos culpa, autem, ex dolorum ullam eius adipisci perspiciatis sequi, accusantium facere molestiae ad omnis nobis. Culpa?</p>
                 </article>
             </section>
-            <section>
-                <h3>List</h3>
+            <section class="list-section">
+                <h3 class="items">List</h3>
                 <ul>
                     <li>Item 1</li>
                     <li>Item 2</li>
