--- a/week03/responsive-images.html
+++ b/week03/responsive-images.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="WDD 131 - Dynamic Web Fundamentals home / Responsive images.">
     <meta name="author" content="Odumamwen Evans Henry Aisiokuebor">
-    <link rel="stylesheet" href="">
-    <title>Document</title>
+    <link rel="stylesheet" href="styles/responsive-images.css">
+    <title>Responsive Images</title>
 </head>
 <body>
     
