--- a/week03/responsive-images.html
+++ b/week03/responsive-images.html
@@ -9,6 +9,14 @@
     <title>Responsive Images</title>
 </head>
 <body>
-    
+    <main>
+        <div class="hero">
+            <picture>
+                <source  srcset="images/hero-large.webp" media="(min-width:1400px)">
+                <source srcset="images/hero-medium.webp" media="(min-width:1000px)">
+                <img src="images/benin_city_nigeria_temple-500 x 250.webp" alt="benin-city Nigeria temple photo" width="500px" height="396">
+            </picture>
+        </div>
+    </main>
 </body>
 </html>
