--- a/place.html
+++ b/place.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="discription" content="Country page, Nigeria page">
+    <meta name="author" content="Odumamwen Evans Henry Aisiokuebor">
+    <link rel="styles" href="styles/place.css">
+    <title>Country page</title>
 </head>
 <body>
     
