--- a/place.html
+++ b/place.html
@@ -14,6 +14,8 @@
     <title>Country page</title>
 </head>
 <body>
-    
+    <header></header>
+    <main></main>
+    <footer></footer>
 </body>
 </html>
