Added the nigerian flag and some css rules.

--- a/place.html
+++ b/place.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="discription" content="Country page, Nigeria page">
     <meta name="author" content="Odumamwen Evans Henry Aisiokuebor">
-    <link rel="styles" href="styles/place.css">
+    <link rel="stylesheet" href="styles/place.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sofia&display=swap" rel="stylesheet">
@@ -15,13 +15,14 @@
     <title>Country page</title>
 </head>
 <body>
-    <header class="flex-head">
-        <img id="country-flag" src="images/nigerian_flag 180x144.webp">
-        <span class="country">Ngeria</span>
+    <header class="block">
+        <span class="flag-span">
+            <img src="images/nigerian_flag_40x32.webp" alt="Small dimension of the Nigerian flag">
+        </span>
     </header>
     <main>
         <h1>Nigeria</h1>
-        <div>
+        <div class="hero">
             <picture>
                 <source srcset="images/wild_african_hippo-1801x902.webp" media="(min-width:1500px)">
                 <source srcset="images/wild_african_hippo-1080x541.webp" media="(min-width:1000px)">
