Developed the place.css to meet professional standard.

--- a/place.html
+++ b/place.html
@@ -18,10 +18,10 @@
     <header class="block">
         <span class="flag-span">
             <img src="images/nigerian_flag_40x32.webp" alt="Small dimension of the Nigerian flag">
+            <h1 class="country">Nigeria</h1>
         </span>
     </header>
     <main>
-        <h1>Nigeria</h1>
         <div class="hero">
             <picture>
                 <source srcset="images/wild_african_hippo-1801x902.webp" media="(min-width:1500px)">
