edited the svg file height and width.

--- a/place.html
+++ b/place.html
@@ -40,6 +40,7 @@
                 <p class="internet-p">Internet connectivity:<span class="internet-value"></span></p>
             </section>
             <section class="weather-section">
+                <img src="images/brightness-high-fill.svg" alt="low sun icon">
                 <h2 class="weather-heading">Weather</h2>
                 <p class="temp-text">Temperature: <span class="temp-value"></span></p>
                 <p class="weather-text">Weather Condition: <span class="weather-condition-value"></span></p>
