Dynamically displayed country information applying DOM manipulation using JavaScript.

--- a/place.html
+++ b/place.html
@@ -29,23 +29,23 @@
                 <img src="images/wild_african_hippo-450x255.webp" alt="Wildlife hippopotamus in a green, leafy water body." width="450" height="225">
             </picture>
             <section class="data-section">
-                <h2 class="data-heading">Data</h2>
-                <p class="area-text">Area: <span class="area-value"></span></p>
-                <p class="capital-p">Capital:<span class="capital-city-value"></span></p>
-                <p class="language-p">Language:<span class="language-value"></span></p>
-                <p class="population-p">Population:<span class="population-value"></span></p>
-                <p class="time-zone-p">Time Zone:<span class="time-zone-value"></span></p>
-                <p class="currency-p">Currency:<span class="currency-value"></span></p>
-                <p class="call-code-p">Call Code:<span class="call-code-value"></span></p>
-                <p class="internet-p">Internet connectivity:<span class="internet-value"></span></p>
+                <h2 class="data-heading"><span class="h-span">>>></span>Data</h2>
+                <p class="area-text"><span class="data-items">Area: </span><span id="area-value"> </span></p>
+                <p class="capital-p"><span class="data-items">Capital:</span><span id="capital-city-value"></span></p>
+                <p class="language-p"><span class="data-items">Language:</span><span id="language-value"></span></p>
+                <p class="population-p"><span class="data-items">Population:</span><span id="population-value"></span></p>
+                <p class="time-zone-p"><span class="data-items">Time Zone:</span><span id="time-zone-value"></span></p>
+                <p class="currency-p"><span class="data-items">Currency:</span><span id="currency-value"></span></p>
+                <p class="call-code-p"><span class="data-items">Call Code:</span><span id="call-code-value"></span></p>
+                <p class="internet-p"><span class="data-items">Internet:</span><span id="internet-value"></span></p>
             </section>
             <section class="weather-section">
-                <img src="images/brightness-high-fill.svg" alt="low sun icon">
-                <h2 class="weather-heading">Weather</h2>
-                <p class="temp-text">Temperature: <span class="temp-value"></span></p>
-                <p class="weather-text">Weather Condition: <span class="weather-condition-value"></span></p>
-                <p class="wind-text">Wind Speed: <span class="wind-speed-value"></span></p>
-                <p class="wind-chill">Wind Chill: <span class="wind-chill-value"></span></p>
+                <h2 class="weather-heading"><span class="h-span">>>></span>Weather</h2>
+                <img src="images/brightness-high-fill.svg" alt="bright sun icon">
+                <p class="temp-text"><span class="weather-items">Temperature:</span><span class="temp-value"></span></p>
+                <p class="weather-text"><span class="weather-items">Weather Condition:</span><span class="weather-condition-value"></span></p>
+                <p class="wind-text"><span class="weather-items">Wind Speed:</span><span class="wind-speed-value"></span></p>
+                <p class="wind-chill"><span class="weather-items">Wind Chill:</span><span class="wind-chill-value"></span></p>
             </section>
         </div>
     </main>
