Dynamically displayed weather parameters applying JavaScript DOM manipulation.

--- a/place.html
+++ b/place.html
@@ -42,10 +42,10 @@
             <section class="weather-section">
                 <h2 class="weather-heading"><span class="h-span">>>></span>Weather</h2>
                 <img src="images/brightness-high-fill.svg" alt="bright sun icon">
-                <p class="temp-text"><span class="weather-items">Temperature:</span><span class="temp-value"></span></p>
-                <p class="weather-text"><span class="weather-items">Weather Condition:</span><span class="weather-condition-value"></span></p>
-                <p class="wind-text"><span class="weather-items">Wind Speed:</span><span class="wind-speed-value"></span></p>
-                <p class="wind-chill"><span class="weather-items">Wind Chill:</span><span class="wind-chill-value"></span></p>
+                <p class="temp-text"><span class="weather-items">Temperature:</span><span class="temp-value temperature-value"></span></p>
+                <p class="weather-text"><span class="weather-items">Weather Condition:</span><span class="weather-condition-value w-condition-value"></span></p>
+                <p class="wind-text"><span class="weather-items">Wind Speed:</span><span class="wind-speed-value w-speed-value"></span></p>
+                <p class="wind-chill"><span class="weather-items">Wind Chill:</span><span class="wind-chill-value w-chill-value"></span></p>
             </section>
         </div>
     </main>
